--- a/custody.html
+++ b/custody.html
@@ -1,12 +1,11 @@
+<!-- TEMPLATE FOR TOPIC PAGES -->
+<!-- You can rename the filename and update the <h1> and <p> to fit each topic -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custody & Family Law Help</title>
-<h1>Custody & Family Law Help</h1>
-<p>Welcome to your legal support hub for custody and family law questions. Ask Sage anything — court orders, visitation, parenting plans, or emergency hearings.</p>
-
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,8 +34,9 @@
   </style>
 </head>
 <body>
-  <h1>[TOPIC TITLE]</h1>
-  <p>[TOPIC INTRO PARAGRAPH]</p>
+ <h1>Custody & Family Law Help</h1>
+<p>Welcome to your legal support hub for custody and family law questions. Ask Sage anything —  visitation, parenting plans, or emergency hearings.</p
+
 
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
