--- a/custody.html
+++ b/custody.html
@@ -36,7 +36,11 @@
 <p>Welcome to your legal support hub for custody and family law questions. Ask Sage anything —  visitation, parenting plans, or emergency hearings.</p
 
 
-  <!-- Embedded Sage Chatbot -->
-  <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
+ <!-- Embedded Sage Chatbot -->
+<script>
+  const endpoint = 'https://ask-sage-g5hds2ybd-gina-lopezs-projects.vercel.app/api/chat';
+</script>
+<iframe id="sageChatWindow" src="sage-chatbot.html" style="display: block;"></iframe>
+ 
 </body>
 </html>
