--- a/custody.html
+++ b/custody.html
@@ -32,15 +32,13 @@
   </style>
 </head>
 <body>
- <h1>Custody & Family Law Help</h1>
-<p>Welcome to your legal support hub for custody and family law questions. Ask Sage anything —  visitation, parenting plans, or emergency hearings.</p
+  <h1>Custody & Family Law Help</h1>
+  <p>Welcome to your legal support hub for custody and family law questions. Ask Sage anything — visitation, parenting plans, or emergency hearings.</p>
 
-
- <!-- Embedded Sage Chatbot -->
-<script>
-  const endpoint = 'https://ask-sage-g5hds2ybd-gina-lopezs-projects.vercel.app/api/chat';
-</script>
-<iframe id="sageChatWindow" src="sage-chatbot.html" style="display: block;"></iframe>
- 
+  <script>
+    const endpoint = 'https://ask-sage-g5hds2ybd-gina-lopezs-projects.vercel.app/api/chat';
+  </script>
+  <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
 </body>
 </html>
+
