--- a/dss.html
+++ b/dss.html
@@ -32,11 +32,11 @@
   </style>
 </head>
 <body>
-<h1>CPS & DSS Defense Hub</h1>
-<p>If DSS or CPS is involved in your life, Sage has your back. Learn what they’re allowed to do, what your rights are, and how to respond with strength and clarity.</p>
-
+  <h1>CPS & DSS Defense Hub</h1>
+  <p>If DSS or CPS is involved in your life, Sage has your back. Learn what they’re allowed to do — and how to push back.</p>
 
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
 </body>
 </html>
+
