--- a/records.html
+++ b/records.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criminal Records & Rights Help</title>
+  <title>Criminal Records & Rights Help</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,11 +32,11 @@
   </style>
 </head>
 <body>
-<h1>Criminal Records & Rights Help</h1>
-<p>Want to clear your name or understand your rights after a charge? Sage can help with expungement, sealing records, and knowing your options for a fresh start.</p>
-
+  <h1>Criminal Records & Rights Help</h1>
+  <p>Want to clear your name or understand your rights after a charge? Sage can help with expungement, background checks, and more.</p>
 
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
 </body>
 </html>
+
