--- a/liberties.html
+++ b/liberties.html
@@ -1,11 +1,9 @@
-<!-- TEMPLATE FOR TOPIC PAGES -->
-<!-- You can rename the filename and update the <h1> and <p> to fit each topic -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Civil Liberties & Due Process</title>
+  <title>Civil Liberties & Due Process</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -34,11 +32,11 @@
   </style>
 </head>
 <body>
- <h1>Civil Liberties & Due Process</h1>
-<p>When your rights are being violated — by police, courts, or agencies — this is where you stand up. Ask Sage what protections you have and how to use them.</p>
-
+  <h1>Civil Liberties & Due Process</h1>
+  <p>If your rights are being violated — by police, agencies, or the court — this is your stand. Ask Sage about constitutional protections and how to fight back legally.</p>
 
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
 </body>
 </html>
+
