--- a/estate.html
+++ b/estate.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estate & Probate Resource Center</title>
- <style>
+  <title>Civil Liberties & Due Process</title>
+  <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -32,11 +32,11 @@
   </style>
 </head>
 <body>
-<h1>Estate & Probate Resource Center</h1>
-<p>Handling a loved one’s estate? Unsure what to do without a will? Ask Sage about probate, inheritance rights, and how to claim what’s yours under Virginia law.</p>
-
+  <h1>Civil Liberties & Due Process</h1>
+  <p>If your rights are being violated — by police, agencies, or the court — this is your stand. Ask Sage about constitutional protections and how to fight back legally.</p>
 
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
 </body>
 </html>
+
