--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
     <div class="navbar">Sovereign Academy - Home</div>
     <h1>Welcome to Sovereign Academy!</h1>
     <p>This is the homepage.</p>
+    <script src="smart-search.js"></script>
+
     <section class="testimonials">
   <h2>What People Are Saying</h2>
   <div class="carousel">
