--- a/index.html
+++ b/index.html
@@ -116,7 +116,14 @@
     <div class="navbar">Sovereign Academy - Home</div>
     <h1>Welcome to Sovereign Academy!</h1>
     <p>This is the homepage.</p>
-    <script src="smart-search.js"></script>
+    <div style="text-align: center; margin-top: 40px; position: relative;">
+  <input type="text" id="smartSearch" placeholder="🔍 Search legal topics..." 
+         style="padding: 10px 40px 10px 20px; width: 60%; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;" 
+         onkeyup="smartNavigate(this.value)">
+  <span style="position: absolute; right: 22%; top: 50%; transform: translateY(-50%); font-size: 18px; color: #999;">🔍</span>
+</div>
+<ul id="smartSuggestions" style="list-style: none; padding: 0; margin: 5px auto 0; width: 60%; text-align: left; display: none; border: 1px solid #ccc; border-radius: 6px; background: #fff; font-size: 16px; max-height: 150px; overflow-y: auto;"></ul>
+
 
     <section class="testimonials">
   <h2>What People Are Saying</h2>
