--- a/resources.html
+++ b/resources.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Legal Remedies for Incarcerated Individuals</title>
+  <script src="smart-search.js"></script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
