--- a/printable-resources.html
+++ b/printable-resources.html
@@ -31,7 +31,16 @@
     }
   </style>
 </head>
+  <script src="smart-search.js"></script>
+
 <body>
+  <div style="text-align: center; margin-top: 40px; position: relative;">
+  <input type="text" id="smartSearch" placeholder="🔍 Search legal topics..." 
+         style="padding: 10px 40px 10px 20px; width: 60%; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;" 
+         onkeyup="smartNavigate(this.value)">
+  <span style="position: absolute; right: 22%; top: 50%; transform: translateY(-50%); font-size: 18px; color: #999;">🔍</span>
+</div>
+
   <h1>📄 Printable Legal Resources</h1>
   <p>Need tools for court, DSS disputes, or representing yourself? Download and print these battle-tested documents.</p>
 
