--- a/records.html
+++ b/records.html
@@ -35,8 +35,17 @@
   <h1>Criminal Records & Rights Help</h1>
   <p>Want to clear your name or understand your rights after a charge? Sage can help with expungement, background checks, and more.</p>
 
+<div style="text-align: center; margin-top: 40px; position: relative;">
+  <input type="text" id="smartSearch" placeholder="🔍 Search legal topics..." 
+         style="padding: 10px 40px 10px 20px; width: 60%; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;" 
+         onkeyup="smartNavigate(this.value)">
+  <span style="position: absolute; right: 22%; top: 50%; transform: translateY(-50%); font-size: 1
+</div>
+8px; color: #999;">🔍</span>
+
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
+  <script src="smart-search.js"></script>
 </body>
 </html>
 
