--- a/dss-defense.html
+++ b/dss-defense.html
@@ -30,6 +30,21 @@
 
     <body>
   <h1>🛡️ DSS Defense Center</h1>
+      <div style="text-align: center; margin-top: 40px; position: relative;">
+  <input type="text" id="smartSearch" placeholder="🔍 Search legal topics..." 
+         style="padding: 10px 40px 10px 20px; width: 60%; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;" 
+         onkeyup="smartNavigate(this.value)">
+  <span style="position: absolute; right: 22%; top: 50%; transform: translateY(-50%); font-size: 1
+</div>
+8px; color: #999;">🔍</span>
+        <ul id="smartSuggestions" style="list-style: none; padding: 0; margin: 5px auto 0; width: 60%; text-align: left; display: none; border: 1px solid #ccc; border-radius: 6px; background: #fff; font-size: 16px; max-height: 150px; overflow-y: auto;"></ul>
+
+<div style="text-align: center; margin-top: 10px;">
+  <button onclick="startVoiceSearch()" style="padding: 10px 20px; font-size: 16px; border-radius: 6px; cursor: pointer;">
+    🎤 Voice Search
+  </button>
+</div>
+
   <p>
     This is your hub to push back. Whether you're facing unfair allegations, custody interference, or just need guidance on DSS overreach, you've come to the right place.
   </p>
@@ -91,7 +106,9 @@
     background-color: #e9ecef;
   }
 </style>
-
+  <script src="smart-search.js"></script>
+  <script src="voice-search.js"></script>
+    
 </body>
 
     body {
