--- a/dss-defense.html
+++ b/dss-defense.html
@@ -37,6 +37,8 @@
   <span style="position: absolute; right: 22%; top: 50%; transform: translateY(-50%); font-size: 1
 </div>
 8px; color: #999;">🔍</span>
+        <div style="margin-top: 30px;"></div>
+
         <ul id="smartSuggestions" style="list-style: none; padding: 0; margin: 5px auto 0; width: 60%; text-align: left; display: none; border: 1px solid #ccc; border-radius: 6px; background: #fff; font-size: 16px; max-height: 150px; overflow-y: auto;"></ul>
 
 <div style="text-align: center; margin-top: 10px;">
