--- a/resources.html
+++ b/resources.html
@@ -67,6 +67,13 @@
         "estate": "estate.html",
         "will": "estate.html"
       };
+      <!-- Voice Search Button -->
+<div style="text-align: center; margin-top: 10px;">
+  <button onclick="startVoiceSearch()" style="padding: 10px 20px; font-size: 16px; border-radius: 6px; cursor: pointer;">
+    🎤 Voice Search
+  </button>
+</div>
+
 
       for (const keyword in routes) {
         if (query.includes(keyword)) {
@@ -241,6 +248,8 @@
 
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
+  <script src="voice-search.js"></script>
+
 </body>
 </html>
 v
