--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
   <a href="dss-strategy-tools.html" style="color: var(--secondary-color); margin-right: 20px;">Strategy Tools</a>
   <a href="printable-resources.html" style="color: var(--secondary-color); margin-right: 20px;">Printable Resources</a>
 </div>
+        <!-- Voice Search Button -->
+<div style="text-align: center; margin-top: 10px;">
+  <button onclick="startVoiceSearch()" style="padding: 10px 20px; font-size: 16px; border-radius: 6px; cursor: pointer;">
+    🎤 Voice Search
+  </button>
+</div>
+
 
 <img src="logo.png" alt="Sovereign Academy Logo" style="width: 150px;">
 
@@ -317,5 +324,7 @@ s0.parentNode.insertBefore(s1,s0);
     <h1>Contact Us</h1>
     <p>Get in touch with Sovereign Academy.</p>
     <button class="button">Send Message</button>
+    <script src="voice-search.js"></script>
+
 </body>
 </html>
