--- a/dss.html
+++ b/dss.html
@@ -42,9 +42,18 @@
 </div>
 8px; color: #999;">🔍</span>
 
+  <!-- Voice Search Button -->
+<div style="text-align: center; margin-top: 10px;">
+  <button onclick="startVoiceSearch()" style="padding: 10px 20px; font-size: 16px; border-radius: 6px; cursor: pointer;">
+    🎤 Voice Search
+  </button>
+</div>
+
+
   <!-- Embedded Sage Chatbot -->
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
   <script src="smart-search.js"></script>
+  <script src=”voice-search.js”></script>
 </body>
 </html>
 
