--- a/eviction.html
+++ b/eviction.html
@@ -34,11 +34,30 @@
 <body>
   <h1>Evictions & Housing Help</h1>
   <p>Need housing support? Learn your rights during an eviction, landlord disputes, or housing discrimination. Sage is here to guide you.</p>
+<!-- Smart Search Bar + Suggestions + Voice -->
+  
+<div style="text-align: center; margin-top: 40px; position: relative;">
+  <input type="text" id="smartSearch" placeholder="🔍 Search legal topics..."
+    style="padding: 10px 40px 10px 20px; width: 60%; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;"
+    onkeyup="smartNavigate(this.value)">
+  <span style="position: absolute; right: 22%; top: 50%; transform: translateY(-50%); font-size: 18px; color: #999;">🔍</span>
+
+  <ul id="smartSuggestions" style="list-style: none; padding: 0; margin: 5px auto 0; width: 60%; text-align: left; display: none; border: 1px solid #ccc; background: white;"></ul>
+
+  <div style="text-align: center; margin-top: 10px;">
+    <button onclick="startVoiceSearch()" style="padding: 10px 20px; font-size: 16px; border-radius: 6px; cursor: pointer;">
+      🎤 Voice Search
+    </button>
+  </div>
+</div>
 
   <script>
     const endpoint = 'https://ask-sage-g5hds2ybd-gina-lopezs-projects.vercel.app/api/chat';
   </script>
   <iframe id="sageChatWindow" src="sage-chatbot.html"></iframe>
+  <script src="smart-search.js"></script>
+  <script src="voice-search.js"></script>
+
 </body>
 </html>
 
