--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
 <head>
     <title>Sovereign Academy - Home</title>
+    <div style="background-color: #fff8dc; color: #444; padding: 15px; text-align: center; font-weight: bold; border-bottom: 2px solid #ccc;">
+  🚧 Sovereign Academy is still under active construction — but we're already live and ready to help! Check back often for new topics and tools. 💪
+  </div>
+
     <link rel="manifest" href="manifest.json">
 
     <style>
