--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@ s0.parentNode.insertBefore(s1,s0);
     alert(`Topic set to: ${topic}`);
   }
 </script>
+        <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered ✅', reg))
+        .catch(err => console.error('Service Worker registration failed ❌', err));
+    });
+  }
+</script>
+
 
 </body>
     <section style="text-align: center; margin: 50px 0;">
