--- a/custody.html
+++ b/custody.html
@@ -48,6 +48,19 @@
     🎤 Voice Search
   </button>
 </div>
+    
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered ✅', reg))
+        .catch(err => console.error('Service Worker registration failed ❌', err));
+    });
+  }
+</script>
+
+
+
 
 
   <script>
