--- a/dss-defense.html
+++ b/dss-defense.html
@@ -110,6 +110,16 @@
 </style>
   <script src="smart-search.js"></script>
   <script src="voice-search.js"></script>
+        <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered ✅', reg))
+        .catch(err => console.error('Service Worker registration failed ❌', err));
+    });
+  }
+</script>
+
     
 </body>
 
