--- a/records.html
+++ b/records.html
@@ -49,6 +49,16 @@
     🎤 Voice Search
   </button>
 </div>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered ✅', reg))
+        .catch(err => console.error('Service Worker registration failed ❌', err));
+    });
+  }
+</script>
+
 
 
   <!-- Embedded Sage Chatbot -->
