--- a/liberties.html
+++ b/liberties.html
@@ -50,6 +50,16 @@
   </button>
 </div>
 
+    <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered ✅', reg))
+        .catch(err => console.error('Service Worker registration failed ❌', err));
+    });
+  }
+</script>
+
   <p>If your rights are being violated — by police, agencies, or the court — this is your stand. Ask Sage about constitutional protections and how to fight back legally.</p>
 
   <!-- Embedded Sage Chatbot -->
