--- a/sui-juris.html
+++ b/sui-juris.html
@@ -61,6 +61,16 @@
 </div>
 
 </div>
+    <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered ✅', reg))
+        .catch(err => console.error('Service Worker registration failed ❌', err));
+    });
+  }
+</script>
+
 
 <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
     &copy; 2025 Sovereign Academy. All rights reserved.
