--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@ s0.parentNode.insertBefore(s1,s0);
   }
 </script>
  
-</script>
 <script>
   const chatBtn = document.createElement('div');
   chatBtn.id = 'sageChatBtn';
@@ -266,6 +265,29 @@ s0.parentNode.insertBefore(s1,s0);
   });
 </script>
 
+<script>
+  let deferredPrompt;
+  const installBtn = document.getElementById('installBtn');
+
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    installBtn.style.display = 'inline-block';
+  });
+
+  installBtn.addEventListener('click', () => {
+    if (deferredPrompt) {
+      deferredPrompt.prompt();
+      deferredPrompt.userChoice.then((choiceResult) => {
+        if (choiceResult.outcome === 'accepted') {
+          console.log('Sovereign Academy installed');
+        }
+        deferredPrompt = null;
+        installBtn.style.display = 'none';
+      });
+    }
+  });
+</script>
 
 
 </body>
