--- a/index.html
+++ b/index.html
@@ -234,13 +234,15 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
         <script>
   if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(reg => console.log('Service Worker registered ✅', reg))
-        .catch(err => console.error('Service Worker registration failed ❌', err));
+    window.addEventListener('load', function () {
+      navigator.serviceWorker.register('/gina-app/service-worker.js')
+        .then(function (reg) {
+          console.log('Service worker registered.', reg);
+        });
     });
   }
 </script>
+
         <script>
   let deferredPrompt;
   const installBtn = document.getElementById('installBtn');
